amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/extension-object-override-interface.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/extension-object-override-interface.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
